--- a/templates/login.html
+++ b/templates/login.html
@@ -213,7 +213,7 @@
 
     <div class="login-container">
         <div class="branding-panel">
-            <img src="{{ url_for('static', filename='img/logo_lcd.png') }}" alt="Logo Sievert LCD">
+            <img src="{{ url_for('static', filename='img/Logo_LCD.png') }}" alt="Logo Sievert LCD">
             <h1>SGIL</h1>
             <div class="divider"></div>
             <p>Sistema de Gestión de Información<br>del Laboratorio</p>
