--- a/templates/base.html
+++ b/templates/base.html
@@ -12,16 +12,16 @@
     <div class="app-container">
         <aside class="sidebar">
             <div class="sidebar-header">
-                <img src="{{ url_for('static', filename='img/logo_lcd.png') }}" alt="Sievert LCD">
+                <img src="{{ url_for('static', filename='img/Logo_LCD.png') }}" alt="Sievert LCD">
                 <p style="font-size: 0.8rem; margin-top: 10px; opacity: 0.7;">Gestión LCD</p>
             </div>
             
             <nav>
-                <a href="{{ url_for('dashboard') }}" class="nav-link active">
-                    <i class="fa-solid fa-grid-2"></i> Dashboard
+                <a href="{{ url_for('home') }}" class="nav-link active">
+                    <i class="fa-solid fa-table-columns"></i> Dashboard
                 </a>
 
-                {% if session['role'] in ['administrador', 'operario', 'comercial'] %}
+                {% if session.get('role') in ['administracion', 'operario', 'comercial', 'tecnico'] %}
                 <a href="{{ url_for('despacho') }}" class="nav-link">
                     <i class="fa-solid fa-truck-fast"></i> Form. Despacho
                 </a>
@@ -30,13 +30,13 @@
                 <a href="#" class="nav-link"><i class="fa-solid fa-flask"></i> Calibración</a>
                 <a href="#" class="nav-link"><i class="fa-solid fa-file-pdf"></i> Informes</a>
                 
-                {% if session['role'] == 'administrador' %}
-                <a href="#" class="nav-link"><i class="fa-solid fa-users-gear"></i> Usuarios</a>
+                {% if session.get('role') == 'administracion' %}
+                <a href="{{ url_for('gestion_usuarios') }}" class="nav-link"><i class="fa-solid fa-users-gear"></i> Usuarios</a>
                 {% endif %}
             </nav>
 
             <div style="margin-top: auto;">
-                <a href="{{ url_for('logout') }}" class="nav-link" style="color: #ff6b6b;">
+                <a href="{{ url_for('force_logout') }}" class="nav-link" style="color: #ff6b6b;">
                     <i class="fa-solid fa-right-from-bracket"></i> Salir
                 </a>
             </div>
