--- a/templates/gestion_usuarios.html
+++ b/templates/gestion_usuarios.html
@@ -210,10 +210,10 @@
                 html: `
                     <input id="swal-name" class="swal2-input" placeholder="Nombre Completo">
                     <input id="swal-email" class="swal2-input" placeholder="Email" type="email">
-                    <input id="swal-pass" class="swal2-input" placeholder="Contraseña" type="password">
+                    <input id="swal-pass" class="swal2-input" placeholder="Contraseña (Mín. 6 caracteres)" type="password">
                     <select id="swal-role" class="swal2-input">
+                        <option value="operario">Operario</option>
                         <option value="comercial">Comercial</option>
-                        <option value="operario">Técnico</option>
                         <option value="logistico">Logístico</option>
                         <option value="coordinacion">Coordinación</option>
                         <option value="administracion">Administrador</option>
