--- a/templates/base.html
+++ b/templates/base.html
@@ -20,7 +20,7 @@
                     <i class="fa-solid fa-house"></i> Dashboard
                 </a>
                 
-                <a href="{{ url_for('despachos.despacho_form') }}" class="nav-link" data-module="despacho">
+                <a href="{{ url_for('despachos.despacho_dashboard') }}" class="nav-link" data-module="despacho">
                     <i class="fa-solid fa-truck-fast"></i> Despachos
                 </a>
 
