--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -55,7 +55,7 @@
     </div>
 
     <div class="module-grid">
-        <a href="{{ url_for('despachos.despacho_form') }}" class="module-card" id="module-despacho">
+        <a href="{{ url_for('despachos.despacho_dashboard') }}" class="module-card" id="module-despacho">
             <i class="module-icon fa-solid fa-truck-fast"></i>
             <span class="module-title">Despachos</span>
         </a>
